5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1650_87.log
== TEST (2019-04-06 02:35:55) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x//100
b=x//10
c=x%10
print(a)
print(b)
print(c)
-- OUTPUT:
2
25
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:36:20) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x//100
b=(x//10)%10
c=x%10
print(a)
print(b)
print(c)
-- OUTPUT:
2
5
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:38:42) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x//100
b=(x//10)%10
c=x%10
if(a>b>c):
	print(c)
else:
	if(c>a>b):
		print(b)
   else:
		if(c>b>a):
      print(a)
	
-- ERROR:
File "XXXX", line 10
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:38:59) 
-- CODE:
x=int(input("Digite um numero de 3 digitos: "))
a=x//100
b=(x//10)%10
c=x%10
if(a>b>c):
	print(c)
else:
	if(c>a>b):
		print(b)
      else:
		   if(c>b>a):
         print(a)
	
-- ERROR:
File "XXXX", line 10
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:42:25) 
-- CODE:
x=int(input("Digite um numero: "))
y=int(input("Digite um numero:"))
z=int(input("Digite um numero: "))
if(x>y>z or y>x>z):
   print(z)
else:
	if(z>x>y or x>z>y):
	   print(y)
	else:
		if(y>z>x or z>y>x):
         print(x)
		
	
	
-- ERROR:
File "XXXX", line 11
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:42:46) 
-- CODE:
x=int(input("Digite um numero: "))
y=int(input("Digite um numero:"))
z=int(input("Digite um numero: "))
if(x>y>z or y>x>z):
   print(z)
else:
	if(z>x>y or x>z>y):
	   print(y)
	else:
		if(y>z>x or z>y>x):       
           print(x)
		
	
	
-- ERROR:
File "XXXX", line 11
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 02:43:20) 
-- CODE:
x=int(input("Digite um numero: "))
y=int(input("Digite um numero:"))
z=int(input("Digite um numero: "))
if(x>y>z or y>x>z):
   print(z)
else:
	if(z>x>y or x>z>y):
	   print(y)
	else:
		if(y>z>x or z>y>x):       
         print(x)
			
		
	
	
-- ERROR:
File "XXXX", line 11
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:51:41) 
-- CODE:
x=int(input("Digite um numero: "))
y=int(input("Digite um numero:"))
z=int(input("Digite um numero: "))
if(x>y>z or y>x>z):
   print(z)
else:
	if(z>x>y or x>z>y):
	   print(y)
	else:
		if(y>z>x or z>y>x):       
         print(x)
			
		
	
	
-- ERROR:
File "XXXX", line 11
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:51:58) 
-- CODE:
x=int(input("Digite um numero: "))
y=int(input("Digite um numero:"))
z=int(input("Digite um numero: "))
if(x>y>z or y>x>z):
   print(z)
else:
	if(z>x>y or x>z>y):
	   print(y)
	else:
		if(y>z>x or z>y>x):       
         print(x)
		else:
			print(x)
			
		
	
	
-- ERROR:
File "XXXX", line 11
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:52:49) 
-- CODE:
x=int(input("Digite um numero: "))
y=int(input("Digite um numero:"))
z=int(input("Digite um numero: "))
if(x>y>z or y>x>z):
   print(z)
else:
	if(z>x>y or x>z>y):
	   print(y)
	else:
		if(z>y>x or y>z>x):
	   print(y)
		
			
		
	
	
-- ERROR:
File "XXXX", line 11
    print(y)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:52:58) 
-- CODE:
x=int(input("Digite um numero: "))
y=int(input("Digite um numero:"))
z=int(input("Digite um numero: "))
if(x>y>z or y>x>z):
   print(z)
else:
	if(z>x>y or x>z>y):
	   print(y)
	else:
		if(z>y>x or y>z>x):
	   print(x)
		
			
		
	
	
-- ERROR:
File "XXXX", line 11
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 14:53:30) 
-- CODE:
x=int(input("Digite um numero: "))
y=int(input("Digite um numero:"))
z=int(input("Digite um numero: "))
if(x>y>z or y>x>z):
   print(z)
else:
	if(z>x>y or x>z>y):
	   print(y)
	else:
		print(x)
			
		
	
	
-- EXECUTION TIME:
0.121971
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
